# Cartpole_DQN_Cpp

./: .gitignore  README.md  post.py  vDQN2.0.sln
Project1/: Project1.vcxproj  dqn_results.txt  dqn_results1185.txt  post.py  source.cpp
Project1/Release/Project1.tlog/: Project1.lastbuildstate
vDQNCUDA/: CMakeLists.txt  DQNcuda.cpp
vDQNCpp/: CMakeLists.txt  source.cpp
vDQNpy/: carpole_hp.py  carpole_v1.py
